[gd_scene load_steps=19 format=2]

[ext_resource path="res://source/Game.gd" type="Script" id=1]
[ext_resource path="res://source/debug/Debug.gd" type="Script" id=2]
[ext_resource path="res://source/mechanics/Mechanics.gd" type="Script" id=3]
[ext_resource path="res://source/mechanics/PlayerControl.gd" type="Script" id=4]
[ext_resource path="res://source/mechanics/Winning.gd" type="Script" id=5]
[ext_resource path="res://source/mechanics/TimeControl.gd" type="Script" id=6]
[ext_resource path="res://source/mechanics/Countdown.gd" type="Script" id=7]
[ext_resource path="res://source/world/World.gd" type="Script" id=8]
[ext_resource path="res://source/world/Land.tscn" type="PackedScene" id=9]
[ext_resource path="res://source/world/animal/Animal.tscn" type="PackedScene" id=10]
[ext_resource path="res://source/world/FinishLine.tscn" type="PackedScene" id=11]
[ext_resource path="res://source/world/RaceLineSprite.tscn" type="PackedScene" id=12]
[ext_resource path="res://source/world/Pit.tscn" type="PackedScene" id=13]
[ext_resource path="res://source/world/JumpPad.tscn" type="PackedScene" id=14]
[ext_resource path="res://source/feel/Juice.gd" type="Script" id=15]
[ext_resource path="res://source/ui/GameOverScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://source/ui/PauseScreen.tscn" type="PackedScene" id=17]
[ext_resource path="res://source/ui/CountdownLabel.tscn" type="PackedScene" id=18]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Debug" type="Node2D" parent="."]
script = ExtResource( 2 )
enable = true

[node name="Mechanics" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerControl" type="Node2D" parent="Mechanics"]
pause_mode = 2
script = ExtResource( 4 )
enabled = false

[node name="Winning" type="Node2D" parent="Mechanics"]
script = ExtResource( 5 )

[node name="TimeControl" type="Node2D" parent="Mechanics"]
script = ExtResource( 6 )
slomo_time_scale = 0.25

[node name="Countdown" type="Timer" parent="Mechanics"]
pause_mode = 2
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
script = ExtResource( 7 )
debug_disabled = true

[node name="World" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Land" parent="World" instance=ExtResource( 9 )]
position = Vector2( 350, 500 )
scale = Vector2( 7, 4 )

[node name="Land2" parent="World" instance=ExtResource( 9 )]
position = Vector2( 1250, 500 )
scale = Vector2( 7, 4 )

[node name="Red" parent="World" instance=ExtResource( 10 )]
modulate = Color( 1, 0.333333, 0.196078, 1 )
position = Vector2( 300, 480 )

[node name="Blue" parent="World" instance=ExtResource( 10 )]
modulate = Color( 0.196078, 0.733333, 1, 1 )
position = Vector2( 220, 480 )

[node name="Green" parent="World" instance=ExtResource( 10 )]
modulate = Color( 0, 1, 0.333333, 1 )
position = Vector2( 140, 480 )

[node name="Yellow" parent="World" instance=ExtResource( 10 )]
modulate = Color( 1, 0.866667, 0.196078, 1 )
position = Vector2( 60, 480 )

[node name="FinishLine" parent="World" instance=ExtResource( 11 )]
position = Vector2( 1420, 525 )

[node name="RaceLineSprite" parent="World" instance=ExtResource( 12 )]
position = Vector2( 380, 525 )

[node name="Pit" parent="World" instance=ExtResource( 13 )]
position = Vector2( 800, 950 )
jump_pad_path = NodePath("../JumpPad")
shape_scale = Vector2( 2, 1 )

[node name="JumpPad" parent="World" instance=ExtResource( 14 )]
position = Vector2( 620, 550 )

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2( 800, 450 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Feel" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GameOverScreen" parent="UI" instance=ExtResource( 16 )]
visible = false

[node name="PauseScreen" parent="UI" instance=ExtResource( 17 )]
visible = false

[node name="CountdownLabel" parent="UI" instance=ExtResource( 18 )]
visible = false

[connection signal="body_entered" from="World/Pit" to="." method="_on_Pit_body_entered"]
